argo-vpol/applicationset-name-matches-project/.chainsaw-test/rbac.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:aggregate-to-admission-controller:argoproj-applicationsets
  labels:
    rbac.kyverno.io/aggregate-to-admission-controller: "true"
rules:
  - apiGroups: [argoproj.io]
    resources: [applicationsets]
    verbs: [get, list, watch]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:aggregate-to-reports-controller:argoproj-applicationsets
  labels:
    rbac.kyverno.io/aggregate-to-reports-controller: "true"
rules:
  - apiGroups: [argoproj.io]
    resources: [applicationsets]
    verbs: [get, list, watch]
